--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest-cov = "^2.12.1"
 pytest-flake8 = "^1.0.7"
 pytest-mypy = "^0.8.1"
 pytest-pylint = "^0.18.0"
+tox = "^3.24.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
