--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
     pytest-mypy >= "0.8.1"
     pytest-pylint >= "0.18.0"
 commands =
-    pytest --cov=Animals/ --cov-report html --flake8 --mypy --pylint Animals/tests
+    pytest --cov=animals/ --cov-report html --flake8 --mypy --pylint animals/
 
 [flake8]
 max-line-length = 120
